--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.8",
     "@mui/material-nextjs": "^6.1.8",
+    "firebase": "^11.0.2",
     "next": "15.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
